kubernetes/apps/base/database/cloudnative-pg/pgadmin/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/name: *app
    gethomepage.dev/pod-selector: app.kubernetes.io/name=pgadmin
    gethomepage.dev/icon: si-postgresql
    gethomepage.dev/siteMonitor: "https://pgadmin.${SECRET_DOMAIN}"
    gethomepage.dev/description: "PostgreSQL administration"
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      url: https://pgadmin.${SECRET_DOMAIN}/misc/ping
      conditions:
        - "[STATUS] == 200"
      group: database
spec:
  hostnames:
    - "pgadmin.${SECRET_DOMAIN}"
    - "pg.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: pgadmin
          namespace: database
          port: 80
